# AirWin

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  build.bat  query
docs/: DOCUMENTATION.md
src/: airdrop.rs  discovery.rs  main.rs
src/network/: ble.rs  discovery.rs  interface.rs  mod.rs
src/protocols/: airdrop.rs  airplay.rs  apple_records.rs  awdl.rs  http_server.rs  mod.rs
src/ui/: app.rs  components.rs  messages.rs  mod.rs  styles.rs  widgets.rs  window.rs
src/ui/components/: error_dialog.rs
src/ui/views/: about_view.rs  main_view.rs  mod.rs  settings_view.rs
src/utils/: error.rs  logging.rs  mod.rs
