[package]
name = "airwin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
mdns-sd = { version = "0.7.5", features = ["async"] }
eframe = { version = "0.21.0", features = ["persistence"] }
egui = "0.21.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
if-addrs = "0.10.1"
local-ip-address = "0.5.1"
socket2 = { version = "0.5", features = ["all"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
mime_guess = "2.0"
image = { version = "0.24", features = ["jpeg", "png"] }
windows = { version = "0.48", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_NetworkManagement_IpHelper"] }
hostname = "0.3"
rfd = "0.11"  # Removed xdg-portal feature for Windows compatibility
rcgen = "0.10"
tokio-native-tls = "0.3"
native-tls = { version = "0.2", features = ["vendored"] }
chrono = { version = "0.4", features = ["serde"] }

[patch.crates-io]
winapi = { git = "https://github.com/retep998/winapi-rs", branch = "0.3" }
